Added scaffolding classes

--- a/app/assets/css/global.css
+++ b/app/assets/css/global.css
@@ -5989,6 +5989,19 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 
 /*=================================================*/
 /*=================================================*/
+html, body, main, aside, div[ui-view] {
+  height: 100%;
+  min-height: 100%; }
+
+.aside__body {
+  background-color: #f7f9fa;
+  width: 240px;
+  float: left;
+  position: fixed; }
+
+.main__body, .header__body {
+  margin-left: 240px; }
+
 /*=================================================*/
 /* =Reset
 /*=================================================*/
