building up the aside nav

--- a/app/components/folder/folder-view.html
+++ b/app/components/folder/folder-view.html
@@ -1,8 +1,16 @@
 ﻿<!--FolderView-->
-<aside role="complementary">
-    aside
+<aside class="aside__body" role="complementary">
+        <nav class="list-group">
+            <a href="#" class="list-group-item active">
+                Cras justo odio
+            </a>
+            <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+            <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+            <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+            <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
+        </nav>
 </aside>
-<header>
+<header class="header__body">
     <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,6 +35,6 @@
         </div>
     </nav>
 </header>
-<main class="container-fluid" main="role">
+<main class="main__body container-fluid" main="role">
     <div ui-view></div>
 </main>
